--- a/Pulpit/Szkolenie_projekt_test/index.html
+++ b/Pulpit/Szkolenie_projekt_test/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width = device-width, initial-scale = 1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title> test kurs</title>
-    <link rel="stylesheet" type ="text/css" href="main.css">
-    
+    <link rel="stylesheet" type="text/css" href="main.css">
+
 </head>
 
 <body>
@@ -23,21 +23,27 @@
     <div>
 
         <h1>How to View HTML Source?</h1>
-        <p>Have you ever seen a Web page and wondered "Hey! How did they do that?"</p>
+        <p>Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"
+        </p>
     </div>
     <div>
         <h2>View HTML Source Code:</h2>
-        <p>Right-click in an HTML page and select "View Page Source" (in
-            Chrome) or "View Source" (in Edge), or similar in other browsers. This will open a window
-            containing the HTML source code of the page.</p>
+        <p>RHblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"</p>
     </div>
     <div>
         <h3>Inspect an HTML Element:</h3>
-        <p>Right-click on an element (or a blank area), and choose "Inspect" or
-            "Inspect Element" to see what elements are made up of (you will see both
-            the HTML and the CSS). You can also edit the HTML or CSS on-the-fly in the
-            Elements or Styles panel that opens.</p>
+        <p>Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"
+        </p>
+        <h4>Inspect an HTML Element:</h4>
+        <p>Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"
+        </p>
+        <h5>Inspect an HTML Element:</h5>
+        <p>Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"Hblablablablabalv"
+        </p>
     </div>
 
-    </body>
+    </div>
+
+</body>
+
 </html>
